<resources>
    <string name="app_name">QRCode Scanner</string>
    <string name="scan_qr_code">QR Code</string>
    <string name="scan_bar_code">Bar Code</string>
    <string name="history_record">History</string>
    <string name="about">About</string>
    <string name="no_camera_permission">You do not have permission to open the camera.</string>
    <string name="no_storage_permission">You do not have permission to open and write storage devices.</string>
    <string name="scan_result">Scan Result</string>
    <string name="copy_content">Copy</string>
    <string name="save_pic">Save</string>
    <string name="visit_url">Visit</string>
    <string name="share_content">Share</string>
    <string name="has_copy_to_board">The scan results have been copied to the clipboard.</string>
    <string name="save_success">Save Succeed.</string>
    <string name="save_failed">Save Failed</string>
    <string name="share_to">Share</string>
    <string name="qr_code">QR Code</string>
    <string name="bar_code">Bar Code</string>
    <string name="about_tip_1">A pure scan code software is just to improve work efficiency, the software does not require network permissions, no ads.</string>
    <string name="about_tip_2">Source code：https://github.com/yuruxuan/SmartCodeScanner</string>
</resources>
