<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:contentInsetStart="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tool_bar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <coding.yu.smartcodescanner.widget.SquareLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#bbb">

                <LinearLayout
                    android:id="@+id/layout_scan_qr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="0.5dp"
                    android:layout_marginBottom="0.5dp"
                    android:background="@drawable/bg_cell_selector"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_scan" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="@string/scan_qr_code"
                        android:textSize="14dp" />

                </LinearLayout>
            </coding.yu.smartcodescanner.widget.SquareLayout>

            <coding.yu.smartcodescanner.widget.SquareLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#bbb">

                <LinearLayout
                    android:id="@+id/layout_scan_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="0.5dp"
                    android:layout_marginBottom="0.5dp"
                    android:background="@drawable/bg_cell_selector"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="2dp"
                        android:src="@drawable/ic_bar_code" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="@string/scan_bar_code"
                        android:textSize="14dp" />

                </LinearLayout>
            </coding.yu.smartcodescanner.widget.SquareLayout>

            <coding.yu.smartcodescanner.widget.SquareLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#bbb">

                <LinearLayout
                    android:id="@+id/layout_history"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="0.5dp"
                    android:background="@drawable/bg_cell_selector"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_history" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="@string/history_record"
                        android:textSize="14dp" />

                </LinearLayout>
            </coding.yu.smartcodescanner.widget.SquareLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <coding.yu.smartcodescanner.widget.SquareLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#bbb">

                <LinearLayout
                    android:id="@+id/layout_about"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="0.5dp"
                    android:layout_marginBottom="0.5dp"
                    android:background="@drawable/bg_cell_selector"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_about" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="@string/about"
                        android:textSize="14dp" />

                </LinearLayout>
            </coding.yu.smartcodescanner.widget.SquareLayout>

            <coding.yu.smartcodescanner.widget.SquareLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <coding.yu.smartcodescanner.widget.SquareLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>